--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BusinessLogicLayer\BusinessLogicLayer.csproj" />
+    <ProjectReference Include="..\BusinessLogicLayer\BLL.csproj" />
   </ItemGroup>
 
 </Project>
