--- a/SL/appsettings.json
+++ b/SL/appsettings.json
@@ -1,15 +1,19 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  }
+	"Logging": {
+		"IncludeScopes": false,
+		"Debug": {
+			"LogLevel": {
+				"Default": "Warning"
+			}
+		},
+
+		"Console": {
+			"LogLevel": {
+				"Default": "Warning"
+			}
+		}
+	},
+	"ConnectionStrings": {
+		"DefaultConnection": "Server=DESKTOP-GD2FLL1\\MSSQLSERVER01;Database=DanBox;Trusted_Connection=True;"
+	}
 }
