fixing according to PR from Zsofia inside the Repository

--- a/SL/appsettings.json
+++ b/SL/appsettings.json
@@ -13,7 +13,7 @@
 			}
 		}
 	},
-	"ConnectionStrings": {
-		"DefaultConnection": "Server=DESKTOP-GD2FLL1\\MSSQLSERVER01;Database=DanBox;Trusted_Connection=True;"
-	}
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DK-WIN-DACO\\SQLSERVER3;Database=DanBox;Trusted_Connection=True;"
+  }
 }
